# CustomerService_audio

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
audio_cs/: main.py
audio_cs/api/: __init__.py  app.py  dependencies.py  schemas.py
audio_cs/chitchat/: __init__.py  handler.py  responder.py
audio_cs/clarify/: __init__.py  responder.py
audio_cs/config/: __init__.py  settings.py
audio_cs/domain/: __init__.py  contexts.py  messages.py  state.py
audio_cs/engine/: __init__.py  builder.py  dialogue_engine.py
audio_cs/history/: builder.py  summarizer.py
audio_cs/infrastructure/: __init__.py  db.py  http_client.py  llm_client.py
audio_cs/knowledge/: __init__.py  handler.py  intents.py  responder.py
audio_cs/model/: __init__.py  base.py  state_record.py
audio_cs/plan/: __init__.py  planner.py  turn_plan.py  validator.py
audio_cs/prompts/: __init__.py  loader.py
audio_cs/repository/: __init__.py  dialogue_repository.py
audio_cs/services/: __init__.py  dialogue_service.py
audio_cs/static/: index.html
audio_cs/task/: __init__.py  handler.py
evaluation/: README.md  llm_judge.py  metrics.py  regression_check.py  runner.py  telemetry.py  test_cases.py  visualize.py
evaluation/prompts/: completeness.jinja2  faithfulness.jinja2  relevance.jinja2
evaluation/reports/: dashboard.html  evaluation_20260701_093656.json  evaluation_20260701_093656.md  evaluation_20260701_150723.json  evaluation_20260701_150723.md  evaluation_20260701_152513.json  evaluation_20260701_152513.md  (+10 more)
flow_config/: system_flows.yml  user_flows.yml
(+29 files in other folders)
